# Quaza

./: .gitignore  .replit  README.md  bash  makefile  python  replit.md  replit.nix  server.js
.agents/memory/: MEMORY.md  emscripten-replit-cache.md  ps5-sockaddr-freebsd.md  wasm-local-conversion.md
.github/workflows/: build.yml
attached_assets/: Pasted--cd-Quaza-git-pull-origin-main--1783279495592_1783279495594.txt  Pasted--cd-Quaza-git-pull-origin-main-cd-payload-export-PS5-PA_1783278908081.txt  Pasted-Let-me-look-at-the-codebase-and-research-all-three-ques_1783123487704.txt  Pasted-cd-Quaza-git-pull-origin-main--1783279341410_1783279341413.txt
docs/: BUILD.md  INSTALL.md  PKG.md  SHADOWMOUNT.md
payload/: CMakeLists.txt  Makefile  browser_launch.c  browser_launch.h  build.sh  build_direct.sh  deploy.sh  jailbreak_detect.c  jailbreak_detect.h  kstuff_lite.h  main.c  mk_shims.sh  netlog.c  netlog.h  param_sfo.c  param_sfo.h  payload.ld  pkg_server.c  pkg_server.h  ps5_pkg_server  push_elf.py  push_elf.sh  push_to_ps5.py  router.c  self_install.c  self_install.h  server.c  sfo_embed.h  tile_pkg_embed.h  upload_release.sh  www_embed.h
payload/crt/: crt.c  kernel.c  rtld.c  syscall.h
payload/include/: ctype.h  dirent.h  errno.h  fcntl.h  ifaddrs.h  pthread.h  signal.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
payload/include/arpa/: inet.h
payload/include/asm/: bitsperlong.h  byteorder.h  errno.h  fcntl.h  ioctl.h  mman.h  posix_types.h  sigcontext.h  signal.h  socket.h  stat.h  types.h
payload/include/asm-generic/: bitsperlong.h  errno-base.h  errno.h  int-ll64.h  ioctl.h  mman.h  posix_types.h  socket.h  stat.h  types.h
payload/include/netinet/: in.h
payload/include/sys/: ioctl.h  select.h  socket.h  stat.h  types.h
payload/libprosperopkg/include/: main.c  npdrm.c  npdrm.h  pfs_builder.c  pfs_builder.h  pfs_directory.c  pfs_types.h  pkg_builder.c  pkg_header.h  pkg_types.h  utils.c
payload/libprosperopkg/src/: pfs_builder.c  pfs_directory.c  pfs_inode.c
payload/libprosperopkg/wasm/: build_wasm.sh  wasm_api.c
payload/sce_sys/: README.md  param_sfo_config.json
payload/stubs/: gen_stubs.sh
payload/tools/: gen_embed.py  gen_embed_pkg.py  gen_param_sfo.py  gen_pkg.sh  gen_sfo_embed.py  pkg_builder_main.c
python/: scraper.py
www/: app.js  index.html  pkg.html
www/js/: browser.js  demo.js  pkg.js  sfo-parser.js  snow.js  wasm-builder.js
www/wasm/: prosperopkg.js  prosperopkg.wasm
